# photon-c

./: .gitignore  CMakeLists.txt  amalgamate.py
impl/photon/: CMakeLists.txt  Files.c  Files.h  Identification.c  Identification.h  Router.c  Router.h  Scripting.c  Scripting.h  Segment.c  Segment.h  Telemetry.c  Telemetry.h
src/photon/: Ber.c  Ber.h  CMakeLists.txt  Clock.c  Clock.h  Components.c  Components.h  Config.h  Decoder.c  Decoder.h  Encoder.c  Encoder.h  Endian.h  Enums.h  Exchange.c  Exchange.h  GcExchange.cpp  GcExchange.hpp  Guid.h  Handler.h  Packets.h  Parser.c  Parser.h  PhotonGcMainImpl.c  PhotonGcMainSingletonImpl.c  Reader.c  Reader.h  Result.c  Result.h  RingBuffer.c  RingBuffer.h  System.h  Time.c  Time.h  Utils.c  Utils.h  Writer.c  Writer.h  photon_prologue.h
sys/photon/: Time_unix.c
tests/: AddressPacket.cpp  Ber.cpp  CMakeLists.txt  Exchange.cpp  ExchangePacket.cpp  PhotonTest.h  Reader.cpp  Router.cpp
